--- a/client-myjss/src/app/modules/general/components/privacy-policy/privacy-policy.component.html
+++ b/client-myjss/src/app/modules/general/components/privacy-policy/privacy-policy.component.html
@@ -20,7 +20,7 @@
 
 <section class="container pb-5">
   <div class="tab-content mt-4">
-    <div class="tab-pane fade show active" *ngIf="selectedTab.id === 'privacy'">
+    <div class="tab-pane fade show active" *ngIf="selectedTab.id === 'privacy-policy'">
       <div class="row">
         <aside class="col-3 me-5">
           <h4 class="pt-3 pt-lg-1 mb-4">Sommaire</h4>
@@ -207,7 +207,7 @@
         </div>
       </div>
     </div>
-    <div class="tab-pane fade show active" *ngIf="selectedTab.id === 'legal'">
+    <div class="tab-pane fade show active" *ngIf="selectedTab.id === 'disclaimer'">
       <div class="row">
         <aside class="col-lg-3 mb-4 mb-lg-0 me-5">
           <div>
@@ -331,9 +331,9 @@
           <h3>7. Votre responsabilité d'utilisateur</h3>
           <p>L’utilisateur reconnaît qu’il a vérifié que le site ne pouvait lui transmettre aucun virus. SPPS n’est pas
             responsable de la présence de virus sur le site. SPPS n’est pas non plus responsable de l’absence ou de
-            l’inexactitude de certaines informations. L’utilisateur reconnaît qu’il utilise sous sa seule responsabilité
+            l’inexactitude de certaines informations.L’utilisateur reconnaît qu’il utilise sous sa seule responsabilité
             les informations et renseignements diffusés sur le site. SPPS ne garantit pas l’exactitude de ces
-            informations et renseignements, qui sont donnés à titre purement indicatif. Le site est disponible 24 h /
+            informations et renseignements, qui sont donnés à titre purement indicatif.Le site est disponible 24 h /
             24, sauf en cas de difficultés techniques internes ou externes et en cas de force majeure. Son
             fonctionnement pourra être interrompu pour les besoins de la maintenance.
           </p>
@@ -355,7 +355,7 @@
       </div>
     </div>
 
-    <div class="tab-pane fade show active" *ngIf="selectedTab.id === 'cgu'">
+    <div class="tab-pane fade show active" *ngIf="selectedTab.id === 'terms'">
       <div class="row">
         <aside class="col-lg-3 mb-4 mb-lg-0 me-5">
           <div>
