fix router cgv, mention legal, policy

--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.html
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.html
@@ -130,9 +130,9 @@
           <div class="row">
             <p class="col-auto fs-sm mb-1 footers-footer" routerLink="/privacy-policy">Politique
               de protection des données personnelles</p>
-            <p class="col-auto fs-sm mb-1 footers-footer" routerLink="/legal">Mentions
+            <p class="col-auto fs-sm mb-1 footers-footer" routerLink="/disclaimer">Mentions
               légales</p>
-            <p class="col-auto fs-sm mb-1 footers-footer" routerLink="/privacy-policy">CGU</p>
+            <p class="col-auto fs-sm mb-1 footers-footer" routerLink="/terms">CGU</p>
           </div>
         </div>
         <div class="col-4">
