--- a/client-jss/src/app/main/components/footer/footer.component.html
+++ b/client-jss/src/app/main/components/footer/footer.component.html
@@ -53,17 +53,15 @@ Footer START -->
             <div class="col-12">
               <ul class="nav flex-column text-primary-hover">
                 <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;"
-                    (click)="openProduct($event)">Annonces légales</a></li>
+                    (click)="openProductAnnounce($event)">Annonces légales</a></li>
                 <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;"
-                    (click)="openProduct($event)">Formalités légales</a></li>
+                    (click)="openProductFormality($event)">Formalités légales</a></li>
                 <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;"
-                    (click)="openProduct($event)">Apostilles-Légalisation</a></li>
+                    (click)="openProductApositlle($event)">Apostilles-Légalisation</a></li>
                 <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;"
-                    (click)="openProduct($event)">Domiciliation</a></li>
+                    (click)="openProductDomiciliation($event)">Domiciliation</a></li>
                 <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;"
-                    (click)="openProduct($event)">Secrétariat juridique</a></li>
-                <li class="nav-item"><a class="nav-link pt-0" style="cursor: pointer;"
-                    (click)="openProduct($event)">Rédactions d'actes</a></li>
+                    (click)="openProductDocument($event)">Fourniture de documents</a></li>
               </ul>
             </div>
           </div>
