--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -73,7 +73,7 @@
                 style="cursor: pointer;" (click)="openCategoryPosts(category,$event)">{{category.name}}</a></li>
 
             <li class="nav-item nav-item-podcast"><span><a class="nav-link podcast-nav-link mt-auto py-0 ps-2"
-                  href="#">Podcast<span><i class="fas fa-bolt"></i></span></a></span></li>
+                  routerLink="podcasts">Podcast<span><i class="fas fa-bolt"></i></span></a></span></li>
 
             <li class="nav-item"><a class="nav-link" href="#"><img src="assets/images/premium-icon.svg"
                   class="me-1" />Premium</a></li>
