--- a/client-myjss/src/app/modules/profile/components/footer/footer.component.html
+++ b/client-myjss/src/app/modules/profile/components/footer/footer.component.html
@@ -141,9 +141,9 @@
               Sociétés</a></p>
         </div>
       </div>
-      <div class="row">
+      <!-- <div class="row">
         <p class="col-auto fs-sm footers-footer">Modifier mes choix de cookies</p>
-      </div>
+      </div> -->
     </div>
   </div>
 </footer>
