--- a/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
+++ b/client-myjss/src/app/modules/tools/components/practical-sheets/practical-sheets.component.html
@@ -26,9 +26,8 @@
           </div>
           <div class="select-box col-3 justify-content-end">
             <select-myjss-category class="cursor-pointer ps-0" [additionnalType]="this.myJssCategories[0]"
-              [(model)]="selectedMyJssCategory" label="Catégories" [form]="practicalSheetsForm"
-              propertyName="selectedMyJssCategory" [isMandatory]="false" [isDisabled]="false"
-              (onFormChange)="searchForPosts()"></select-myjss-category>
+              [(model)]="selectedMyJssCategory" [form]="practicalSheetsForm" propertyName="selectedMyJssCategory"
+              [isMandatory]="false" [isDisabled]="false" (onFormChange)="searchForPosts()"></select-myjss-category>
           </div>
         </div>
       </div>
