--- a/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/announcement/announcement.component.html
@@ -53,7 +53,7 @@
             <div class="ps-0">
               <div class="card card-carousel">
                 <div class="card-body">
-                  <h4 class="card-title card-title-truncate">{{post.titleText}}</h4>
+                  <h3 class="card-title card-title-truncate">{{post.titleText}}</h3>
                   <p class="card-text text-gray card-text-truncate" [innerHTML]="post.excerptText | trustHtml"></p>
                 </div>
                 <div class="card-footer ">
@@ -160,7 +160,7 @@
       <div class="col">
         <div class="card h-100 border-0 rounded-5 yellow-card align-items-center">
           <div class="card-body d-flex justify-content-center align-items-center text-center">
-            <h3 class="blue-title">MyJSS <br> MyJSS, bien plus qu’un service !</h3>
+            <h3 class="blue-title">MyJSS, bien plus qu’un service !</h3>
           </div>
         </div>
       </div>
@@ -242,8 +242,7 @@
           <br />
           MyJSS s’engage à publier votre annonce légale simple ou complexe dans l’heure.
         </p>
-        <div class="d-flex d-md-none d-lg-flex justify-content-between w-100 pb-4 pb-xl-5 mb-2 mb-sm-3 mb-xl-2"
-          style="max-width: 440px;">
+        <div class="d-flex d-md-none d-lg-flex justify-content-between w-100 pb-4 pb-xl-5 mb-2 mb-sm-3 mb-xl-2">
           <div class="pe-4">
             <div class="h2 mb-1 text-white">100 %</div>
             <div class="fs-sm">de types d’annonces traitées</div>
