--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
@@ -39,8 +39,8 @@
 
         </div>
         <!-- User signed in state. Account dropdown on screens > 576px -->
-        <div class="dropdown nav" *ngIf="currentUser && currentUser.id">
-          <a class="d-flex align-items-center p-0" data-bs-toggle="dropdown" aria-expanded="false">
+        <div class="dropdown nav " *ngIf="currentUser && currentUser.id">
+          <a class="d-flex align-items-center p-0 user-account" data-bs-toggle="dropdown" aria-expanded="false">
             <avatar class="avatar-select" [user]="currentUser" [size]="48"></avatar>
             <div class="ps-2 d-none d-md-block">
               <div class="fs-xs lh-1 opacity-60">Bonjour,</div>
