--- a/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
+++ b/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
@@ -93,40 +93,59 @@
       <!-- Order -->
       <div class="accordion-item border-top mb-0" *ngFor="let order of orders">
         <div class="accordion-header">
-          <a class="accordion-button d-flex fs-4 fw-normal text-decoration-none py-3 collapsed" href="#"
-            [attr.data-bs-target]="'#order'+order.id" data-bs-toggle="collapse" aria-expanded="false"
+          <a class="accordion-button d-flex justify-content-between align-items-start text-decoration-none py-3 collapsed"
+            href="#" [attr.data-bs-target]="'#order'+order.id" data-bs-toggle="collapse" aria-expanded="false"
             [attr.aria-controls]="'#order'+order.id">
-            <div class="d-flex justify-content-between w-100">
-              <div class="me-3 me-sm-4" style="width: 28%;">
-                <div class="fs-sm text-body-secondary">n°{{order.id}} <i
-                    class="ai-triangle-alert fs-base text-danger ms-2" style="-webkit-text-stroke: 1px;"
-                    data-bs-toggle="tooltip" data-bs-placement="right" *ngIf="order.hasMissingInformations"
-                    title="Des renseignements complémentaires sont nécessaires : veuillez vous reporter au détail de la commande"></i>
+
+            <div class="container-fluid">
+              <div class="row g-2 w-100">
+
+                <div class="col-12 col-sm-2">
+                  <div class="fs-sm text-body-secondary fw-bold text-center">
+                    n°{{order.id}}
+                    <i class="ai-triangle-alert fs-base text-danger ms-2" style="-webkit-text-stroke: 1px;"
+                      data-bs-toggle="tooltip" data-bs-placement="right" *ngIf="order.hasMissingInformations"
+                      title="Des renseignements complémentaires sont nécessaires : veuillez vous reporter au détail de la commande"></i>
+                  </div>
+                  <span class="badge bg-opacity-10 fs-xs text-wrap mt-2 mr-2"
+                    [ngClass]="getClassForCustomerOrderStatus(order)" style="white-space: normal;">
+                    {{getCustomerOrderStatusLabel(order)}}
+                  </span>
                 </div>
-                <span class="badge bg-opacity-10  fs-xs"
-                  [ngClass]="getClassForCustomerOrderStatus(order)">{{getCustomerOrderStatusLabel(order)}}</span>
-              </div>
-              <div class="me-3 me-sm-4" style="width: 15%;"
-                *ngIf="currentScope && currentScope.length>1 && order.responsable">
-                <div class="d-none d-sm-block fs-sm text-body-secondary mb-2  ">Responsable</div>
-                <div class="fs-sm fw-medium text-dark">{{capitalizeName(order.responsable.firstname + ' '
-                  +order.responsable.lastname)}}</div>
-              </div>
-              <div class="me-3 me-sm-4" style="width: 15%;">
-                <div class="d-none d-sm-block fs-sm text-body-secondary mb-2  ">Date de commande</div>
-                <div class="fs-sm fw-medium text-dark">{{order.createdDate| date:'dd/MM/yyyy'}}</div>
-              </div>
-              <div class="me-3 me-sm-4" style="width: 20%;">
-                <div class="fs-sm text-body-secondary mb-2">Affaire</div>
-                <div class="fs-sm fw-medium text-dark">{{capitalizeName(order.affairesList)}}</div>
-              </div>
-              <div class="me-3 me-sm-4" style="width: 37%;">
-                <div class="fs-sm text-body-secondary mb-2">Services</div>
-                <div class="fs-sm fw-medium text-dark">{{order.servicesList}}</div>
+
+                <div class="col-12 col-sm-2" *ngIf="currentScope && currentScope.length > 1 && order.responsable">
+                  <div class="fs-sm text-body-secondary fw-bold mb-1">Responsable</div>
+                  <div class="fs-sm fw-medium text-dark">
+                    {{capitalizeName(order.responsable.firstname + ' ' + order.responsable.lastname)}}
+                  </div>
+                </div>
+
+                <div class="col-12 col-sm-2">
+                  <div class="fs-sm text-body-secondary fw-bold mb-1">Date de commande</div>
+                  <div class="fs-sm fw-medium text-dark">
+                    {{order.createdDate | date:'dd/MM/yyyy'}}
+                  </div>
+                </div>
+
+                <div class="col-12 col-sm-3">
+                  <div class="fs-sm text-body-secondary fw-bold mb-1">Affaire</div>
+                  <div class="fs-sm fw-medium text-dark">
+                    {{capitalizeName(order.affairesList)}}
+                  </div>
+                </div>
+
+                <div class="col-12 col-sm-3">
+                  <div class="fs-sm text-body-secondary fw-bold mb-1">Services</div>
+                  <div class="fs-sm fw-medium text-dark">
+                    {{order.servicesList}}
+                  </div>
+                </div>
+
               </div>
             </div>
           </a>
         </div>
+
         <div class="accordion-collapse collapse" [id]="'order'+order.id" data-bs-parent="#orders"
           (show.bs.collapse)="loadOrderDetails($event, order)">
           <div class="accordion-body">
@@ -141,87 +160,116 @@
                 </p>
               </div>
             </div>
-            <div class="table-responsive pt-1" *ngIf="ordersAssoAffaireOrders[order.id]">
-              <table class="table align-middle w-100" style="min-width: 450px;">
-                <tbody>
-                  <ng-container *ngFor="let asso of ordersAssoAffaireOrders[order.id]">
-                    <tr *ngFor="let service of asso.services">
-                      <td class="border-0 py-1 px-0">
-                        <div class="d-flex align-items-center">
-                          <div class="ps-3 ps-sm-4">
-                            <h4 class="h6 mb-2">
-                              <a>{{service.serviceLabelToDisplay}}</a>
-                            </h4>
-                            <div class="text-body-secondary fs-sm me-3">
-                              {{capitalizeName(asso.affaire.denomination?asso.affaire.denomination:(asso.affaire.firstname
-                              +"
-                              "+asso.affaire.lastname))}}{{asso.affaire.city?(" -
-                              "+capitalizeName(asso.affaire.city.label)):""}}{{(asso.affaire.siret &&
-                              asso.affaire.siret.length>0)?(" -
-                              "+asso.affaire.siret):""}}</div>
-                          </div>
-                        </div>
-                      </td>
-                      <td class="border-0 py-1 pe-0 ps-3 ps-sm-4">
-                        <span class="badge bg-info bg-opacity-10 text-info fs-xs">{{service.serviceStatus}}</span>
-                      </td>
-                      <td class="border-0 py-1 pe-0 ps-3 ps-sm-4">
-                        <i class="ai-triangle-alert fs-base text-danger ms-2" style="-webkit-text-stroke: 1px;"
-                          data-bs-toggle="tooltip" data-bs-placement="right" *ngIf="service.hasMissingInformations"
-                          [title]="'Le '+getLastMissingAttachmentQueryDateLabel(service)+' : des renseignements complémentaires sont nécessaires : veuillez vous reporter au détail du service'"></i>
-                      </td>
-                      <td class="border-0 text-end py-1 pe-0 ps-3 ps-sm-4" *ngIf="service.servicePrice">
-                        <div class="fs-sm text-body-secondary mb-2">Total</div>
-                        <div class="fs-sm fw-medium text-dark">{{service.servicePrice | currency:'EUR' }}</div>
-                      </td>
-                    </tr>
-                  </ng-container>
-                </tbody>
-              </table>
-            </div>
-            <div class="bg-secondary rounded-1 p-4 my-2">
-              <div class="row">
-                <div class="col-sm-5 col-md-3 col-lg-4 mb-3 mb-md-0">
-                  <div class="fs-sm fw-medium text-dark mb-1">Envoi de la facture à :</div>
-                  <div class="fs-sm" *ngIf="ordersMailComputeResult[order.id]">
-                    {{getCustomerOrderBillingMailList(order)}}</div>
-                  <div class="fs-sm" *ngIf="!ordersMailComputeResult[order.id]">
-                    <p class="card-text placeholder-glow">
-                      <span class="placeholder placeholder-sm col-7 me-2"></span>
-                      <span class="placeholder placeholder-sm col-4"></span>
-                    </p>
+
+            <div *ngIf="ordersAssoAffaireOrders[order.id]">
+              <div *ngFor="let asso of ordersAssoAffaireOrders[order.id]">
+                <div *ngFor="let service of asso.services" class="card mb-3 ">
+                  <div class="card-body p-3 d-flex flex-column flex-sm-row align-items-start align-items-sm-center">
+
+                    <!-- Libellé + Affaire -->
+                    <div class="flex-fill text-break">
+                      <h4 class="h6 mb-1">
+                        <a>{{ service.serviceLabelToDisplay }}</a>
+                      </h4>
+                      <div class="text-body-secondary fs-sm">
+                        {{ capitalizeName(asso.affaire.denomination ? asso.affaire.denomination :
+                        (asso.affaire.firstname + ' ' + asso.affaire.lastname)) }}
+                        <span *ngIf="asso.affaire.city">
+                          - {{ capitalizeName(asso.affaire.city.label) }}
+                        </span>
+                        <span *ngIf="asso.affaire.siret">
+                          - {{ asso.affaire.siret }}
+                        </span>
+                      </div>
+                    </div>
+
+                    <!-- Statut -->
+                    <div class="mt-2 mt-sm-0 ps-2 ps-sm-3 text-nowrap">
+                      <span class="badge bg-info bg-opacity-10 text-info fs-xs">
+                        {{ service.serviceStatus }}
+                      </span>
+                    </div>
+
+                    <!-- Icône alerte -->
+                    <div class="mt-2 mt-sm-0 ps-sm-3 d-flex align-items-center">
+                      <i class="ai-triangle-alert fs-base text-danger" style="-webkit-text-stroke: 1px;"
+                        data-bs-toggle="tooltip" data-bs-placement="right" *ngIf="service.hasMissingInformations"
+                        title="Des renseignements complémentaires sont nécessaires : veuillez vous reporter au détail du devis">
+                      </i>
+                    </div>
+
+                    <!-- Prix -->
+                    <div class="mt-2 mt-sm-0 ps-sm-3 text-sm-end text-start" *ngIf="service.servicePrice">
+                      <div class="fs-sm text-body-secondary mb-1">Total</div>
+                      <div class="fs-sm fw-medium text-dark">
+                        {{ service.servicePrice | currency:'EUR' }}
+                      </div>
+                    </div>
+
                   </div>
-                  <button type="button" class="btn btn-link py-1 px-0 mt-2"
-                    (click)="openOrderDetails($event ,order);$event.stopPropagation();">
-                    <i class="ai-file-text me-2"></i>
-                    Détails de la commande
-                  </button>
-                </div>
-                <div class="col-sm-7 col-md-5 mb-4 mb-md-0" *ngIf="ordersInvoiceLabelResult[order.id]">
-                  <div class="fs-sm fw-medium text-dark mb-1">Adresse de facturation :</div>
-                  <div class="fs-sm">
-                    {{ordersInvoiceLabelResult[order.id].billingLabel}}<br>{{ordersInvoiceLabelResult[order.id].billingLabelAddress
-                    }}<br>{{ordersInvoiceLabelResult[order.id].billingLabelPostalCode }}
-                    {{ordersInvoiceLabelResult[order.id].billingLabelCity?ordersInvoiceLabelResult[order.id].billingLabelCity.label:""}}<span
-                      *ngIf="ordersInvoiceLabelResult[order.id].commandNumber && ordersInvoiceLabelResult[order.id].commandNumber.length>0"><br>Commande
-                      {{ordersInvoiceLabelResult[order.id].commandNumber }}</span></div>
-                </div>
-                <div class="col-sm-7 col-md-5 mb-4 mb-md-0" *ngIf="!ordersInvoiceLabelResult[order.id]">
-                  <p class="card-text placeholder-glow">
-                    <span class="placeholder placeholder-sm col-7 me-2"></span>
-                    <span class="placeholder placeholder-sm col-4"></span>
-                    <span class="placeholder placeholder-sm col-4"></span>
-                  </p>
-                </div>
-                <div class="col-md-4 col-lg-3 text-md-end"
-                  *ngIf="order.customerOrderStatus.code == CUSTOMER_ORDER_STATUS_BILLED">
-                  <button class="btn btn-sm btn-outline-primary w-100 w-md-auto" type="button">
-                    <i class="ai-star me-2 ms-n1"></i>
-                    Laisser un avis
-                  </button>
                 </div>
               </div>
             </div>
+
+            <div class="card border-0 bg-secondary  my-3">
+              <div class="card-body">
+                <div class="row g-4">
+
+                  <!-- Bloc : Envoi de la facture -->
+                  <div class="col-sm-6 col-lg-4">
+                    <div class="fs-sm fw-medium text-dark mb-1">Envoi de la facture à :</div>
+                    <div class="fs-sm" *ngIf="ordersMailComputeResult[order.id]">
+                      {{ getCustomerOrderBillingMailList(order) }}
+                    </div>
+                    <div class="fs-sm" *ngIf="!ordersMailComputeResult[order.id]">
+                      <p class="card-text placeholder-glow">
+                        <span class="placeholder placeholder-sm col-7 me-2"></span>
+                        <span class="placeholder placeholder-sm col-4"></span>
+                      </p>
+                    </div>
+                    <button type="button" class="btn btn-link btn-sm px-0 mt-2"
+                      (click)="openOrderDetails($event, order); $event.stopPropagation();">
+                      <i class="ai-file-text me-2"></i>Détails de la commande
+                    </button>
+                  </div>
+
+                  <!-- Bloc : Adresse de facturation -->
+                  <div class="col-sm-6 col-lg-5" *ngIf="ordersInvoiceLabelResult[order.id]">
+                    <div class="fs-sm fw-medium text-dark mb-1">Adresse de facturation :</div>
+                    <div class="fs-sm">
+                      {{ ordersInvoiceLabelResult[order.id].billingLabel }}<br>
+                      {{ ordersInvoiceLabelResult[order.id].billingLabelAddress }}<br>
+                      {{ ordersInvoiceLabelResult[order.id].billingLabelPostalCode }}
+                      {{
+                      ordersInvoiceLabelResult[order.id].billingLabelCity?ordersInvoiceLabelResult[order.id].billingLabelCity.label:''
+                      }}
+                      <span *ngIf="ordersInvoiceLabelResult[order.id].commandNumber?.length">
+                        <br>Commande {{ ordersInvoiceLabelResult[order.id].commandNumber }}
+                      </span>
+                    </div>
+                  </div>
+
+                  <!-- Bloc : Loader Adresse -->
+                  <div class="col-sm-6 col-lg-5" *ngIf="!ordersInvoiceLabelResult[order.id]">
+                    <p class="card-text placeholder-glow">
+                      <span class="placeholder placeholder-sm col-7 me-2"></span>
+                      <span class="placeholder placeholder-sm col-4"></span>
+                      <span class="placeholder placeholder-sm col-4"></span>
+                    </p>
+                  </div>
+
+                  <!-- Bloc : Bouton avis -->
+                  <div class="col-sm-6 col-lg-3 text-sm-end align-self-start"
+                    *ngIf="order.customerOrderStatus.code === CUSTOMER_ORDER_STATUS_BILLED">
+                    <button class="btn btn-sm btn-outline-primary w-100 w-sm-auto" type="button">
+                      <i class="ai-star me-2 ms-n1"></i>Laisser un avis
+                    </button>
+                  </div>
+
+                </div>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
