--- a/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
@@ -162,7 +162,7 @@
                         *ngIf="assoServiceDocument.formalisteComment && assoServiceDocument.formalisteComment.length>0">
                         {{assoServiceDocument.formalisteComment}}</p>
                       <div class="mb-2 mb-md-3 row  " *ngIf="canEditQuotation">
-                        <div class="col-md-10">
+                        <div class="col-md-12">
                           <single-upload [entity]="assoServiceDocument" (endOfUpload)="refreshCurrentAssoAffaireOrder()"
                             [entityType]="ASSO_SERVICE_DOCUMENT_ENTITY_TYPE.entityType" [isDirectUpload]="true"
                             [attachmentType]="assoServiceDocument.typeDocument.attachmentType"
@@ -171,30 +171,29 @@
                       </div>
                       <div class="table-responsive"
                         *ngIf="assoServiceDocument.attachments && assoServiceDocument.attachments.length>0">
-                        <table class="table table-hover">
+                        <table class="table table-hover mb-0">
                           <thead>
                             <tr>
-                              <th scope="col">#</th>
-                              <th scope="col">Nom</th>
-                              <th scope="col">Date de dépot</th>
-                              <th scope="col"></th>
+                              <th style="width: 5%;">#</th>
+                              <th>Nom</th>
+                              <th class="d-none d-md-table-cell" style="width: 20%;">Type</th>
+                              <th class="d-none d-lg-table-cell" style="width: 20%;">Date de dépôt</th>
+                              <th style="width: 10%;"></th>
                             </tr>
                           </thead>
                           <tbody>
-                            <tr *ngFor="let attachment of assoServiceDocument.attachments; let index = index">
-                              <th scope="row">{{index+1}}</th>
-                              <td>{{attachment.description}}</td>
-                              <td>{{attachment.creatDateTime | date:'dd/MM/yyyy'}}</td>
-                              <td><button type="button" class="btn btn-danger btn-icon btn-sm me-3"
-                                  aria-label="Supprimer" data-bs-toggle="tooltip" data-bs-placement="right"
-                                  title="Supprimer" (click)="disableAttachment(attachment)"><span
-                                    data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom">
-                                    <i class="ai-cross"></i></span>
-                                </button><button type="button" class="btn btn-secondary btn-icon btn-sm"
-                                  aria-label="Télécharger" data-bs-toggle="tooltip" data-bs-placement="right"
-                                  title="Télécharger" (click)="downloadAttachment(attachment)">
+                            <tr *ngFor="let attachment of assoServiceDocument.attachments; let i = index">
+                              <th scope="row">{{i + 1}}</th>
+                              <td class="text-wrap" style="min-width: 150px;">{{attachment.description}}</td>
+                              <td class="d-none d-md-table-cell">{{attachment.attachmentType.label}}</td>
+                              <td class="d-none d-lg-table-cell">{{attachment.creatDateTime | date:'dd/MM/yyyy'}}</td>
+                              <td>
+                                <button type="button" class="btn btn-secondary btn-icon btn-sm" aria-label="Télécharger"
+                                  data-bs-toggle="tooltip" data-bs-placement="right" title="Télécharger"
+                                  (click)="downloadAttachment(attachment)">
                                   <i class="ai-download"></i>
-                                </button></td>
+                                </button>
+                              </td>
                             </tr>
                           </tbody>
                         </table>
