--- a/client-myjss/src/app/modules/my-account/components/scope/scope.component.html
+++ b/client-myjss/src/app/modules/my-account/components/scope/scope.component.html
@@ -3,16 +3,20 @@
 
 <section class="card border-0 py-1 p-md-2 p-xl-3 p-xxl-4">
   <div class="card-body">
-    <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-0 mb-lg-1 mb-xl-3">
-      <i class="ai-grid text-primary lead pe-1 me-2"></i>
-      <h2 class="h4 mb-0">Mon périmètre</h2>
-      <div class="ms-auto" *ngIf="potentialResponsables && currentUser && currentScope">
-        <a class="btn btn-sm btn-secondary ms-auto" style="margin-right: 10px;"
-          (click)="selectAll();$event.stopPropagation()">Sélectionner tout</a>
-        <a class="btn btn-sm btn-secondary ms-auto" (click)="unselectAll();$event.stopPropagation()">Déselectionner
-          tout</a>
+    <div
+      class="d-flex flex-column flex-sm-row align-items-start align-items-sm-center mt-sm-n1 pb-4 mb-0 mb-lg-1 mb-xl-3">
+      <div class="d-flex align-items-center mb-2 mb-sm-0">
+        <i class="ai-grid text-primary lead pe-1 me-2"></i>
+        <h2 class="h4 mb-0">Mon périmètre</h2>
+      </div>
+      <div class="mt-2 mt-sm-0 ms-sm-auto" *ngIf="potentialResponsables && currentUser && currentScope">
+        <button class="btn btn-sm btn-secondary me-2 mb-2 mb-sm-0"
+          (click)="selectAll(); $event.stopPropagation()">Sélectionner tout</button>
+        <button class="btn btn-sm btn-secondary mb-2 mb-sm-0"
+          (click)="unselectAll(); $event.stopPropagation()">Désélectionner tout</button>
       </div>
     </div>
+
     <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-0 mb-lg-1 mb-xl-3">
       <div class="alert alert-info d-flex mb-0" role="alert">
         <i class="ai-circle-info fs-xl"></i>
