--- a/client-myjss/src/assets/css/theme-account.css
+++ b/client-myjss/src/assets/css/theme-account.css
@@ -4274,6 +4274,8 @@ textarea.form-control-lg {
   background: none;
   border: 0;
   transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out, border-color 0.2s ease-in-out;
+  border-width: 1px !important;
+  border-color: var(--ar-gray-300) !important;
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -4317,14 +4319,14 @@ textarea.form-control-lg {
 
 .nav-tabs .nav-link:hover, .nav-tabs .nav-link:focus {
   isolation: isolate;
-  border-color: var(--ar-nav-tabs-link-hover-border-color);
+  border-color: var(--ar-nav-tabs-link-active-border-color) !important;
 }
 
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
   color: var(--ar-nav-tabs-link-active-color);
   background-color: var(--ar-nav-tabs-link-active-bg);
-  border-color: var(--ar-nav-tabs-link-active-border-color);
+  border-color: var(--ar-nav-tabs-link-active-border-color) !important;
 }
 
 .nav-tabs .dropdown-menu {
