--- a/client/src/app/modules/crm/components/crm/crm.component.html
+++ b/client/src/app/modules/crm/components/crm/crm.component.html
@@ -9,4 +9,9 @@
       <webinar-participant></webinar-participant>
     </ng-template>
   </mat-tab>
+  <mat-tab label=" Gestion des candidatures">
+    <ng-template matTabContent>
+      <candidacy></candidacy>
+    </ng-template>
+  </mat-tab>
 </mat-tab-group>
