--- a/client-myjss/src/app/modules/miscellaneous/components/forms/single-upload/single-upload.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/single-upload/single-upload.component.html
@@ -1,8 +1,13 @@
 <div class="h-100 rounded-1 download-card p-4 d-flex flex-column align-items-center justify-content-center"
   (click)="onCardClick()" (dragover)="onDragOver($event)" (dragleave)="onDragLeave($event)" (drop)="onDrop($event)">
   <input class="form-control d-none" type="file" (change)="onFileSelected($event)" #fileInput>
-  <h6>Choisissez des fichiers ou déposez-les ici</h6>
+  <h6>Choisissez un fichier ou déposez-le ici</h6>
   <i class="ai-upload fs-1 mb-3"></i>
   <p class="max-size">Formats acceptés : PDF, JPEG, PNG, jusqu'à {{MAX_SIZE_UPLOAD_FILES_IN_MO}} Mo</p>
   <label class="btn btn-outline-secondary m-auto rounded-1">Parcourir</label>
+</div>
+<div *ngIf="files && files.length>0 && !isDirectUpload">
+  <div *ngFor="let file of files">
+    {{ file?.name }} ({{ formatBytes(file?.size,1) }})
+  </div>
 </div>
