end of indicator

--- a/client/src/app/modules/reporting/components/indicator/indicator.component.html
+++ b/client/src/app/modules/reporting/components/indicator/indicator.component.html
@@ -7,7 +7,7 @@
     </mat-tab>
     <mat-tab label="Indicateurs">
       <ng-template matTabContent>
-        <indicator-detailed></indicator-detailed>
+        <indicator-detailed [idIndicator]="idIndicator" [idEmployee]="idEmployee"></indicator-detailed>
       </ng-template>
     </mat-tab>
   </mat-tab-group>
